@@ -1,3 +1,8 @@
+Wed Nov  7 09:42:31 CET 2001  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/init.c (window_menu_help_manual_activate_cb): Changed to
+	just call "ghelp:gnome-mud", which seems to do the trick.
+
 Tue Nov  6 18:30:01 CET 2001  Jordi Mallach <jordi@sindominio.net>
 
 	* po/{ca,es}.po: Updated.
